test(backend): fix `GlobalExceptionHandlerTest` and improve assertion clarity